<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/AmountLabel"
        android:layout_width="50dp"
        android:layout_height="29dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="5dp"
        android:text="@string/AmountLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/enterAmount"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/EnterAmount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toEndOf="@+id/AmountLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/taxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Tax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmountLabel"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/enterTaxAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/EnterTaxAmount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toEndOf="@+id/taxLabel"
        app:layout_constraintTop_toBottomOf="@+id/enterAmount"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:layout_width="245dp"
        android:layout_height="208dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTaxAmount"
        app:layout_constraintVertical_bias="0.03">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tips" />

        <RadioButton
            android:id="@+id/buttonZero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonZero" />

        <RadioButton
            android:id="@+id/buttonFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonFive" />

        <RadioButton
            android:id="@+id/buttonTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonTen" />

        <RadioButton
            android:id="@+id/buttonTwenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonTwenty" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>